--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,41 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;400;500&display=swap" rel="stylesheet">
+    <style media="screen">
+      .loader {
+          background-image: radial-gradient( circle farthest-corner at 10% 20%, #001227 41.2%, #250621 90% );
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          z-index: 100;
+          display: flex;
+          place-content: center;
+      }
+      .loader-icon {
+          width: 70px;
+          animation-name: animate-load;
+          animation-duration: 1s;
+          animation-timing-function: linear;
+          animation-iteration-count: infinite;
+      }
+
+      @keyframes animate-load {
+          0% {
+            transform: rotateZ(0deg);
+          }
+          100% {
+            transform: rotateZ(360deg);
+          }
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+
+    <div id="root"><div class="loader"><img class="loader-icon" src="./music-loader.svg" /></div></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
