making it responsive and some other finale touches

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#28c7fa" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="THE TOP 10 FILM SCORES OF HANS ZIMMER"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -54,7 +54,7 @@
           }
       }
     </style>
-    <title>React App</title>
+    <title>Zimmer App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
